# rust-fullstack-international-acceleration

./: README.md
backend/: .env  Cargo.toml  Rocket.toml  docker-compose.yml
backend/migrations/2024-03-22-214643_create_slot_enum/: down.sql  up.sql
backend/migrations/2024-03-22-215103_create_components/: down.sql  up.sql
backend/migrations/2024-03-23-003638_create_rigs/: down.sql  up.sql
backend/migrations/2024-03-23-003930_create_rig_components/: down.sql  up.sql
backend/src/: database.rs  main.rs  schema.rs  types.rs
backend/src/api/: component.rs  mod.rs  rig.rs
backend/src/dto/: component.rs  mod.rs  rig.rs
backend/src/models/: component.rs  rig.rs
backend/src/repository/: component.rs  rig.rs
frontend/: Cargo.toml
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/pages/: component.rs  rig.rs
frontend/src/services/: component.rs  rig.rs
frontend/src/types/: component.rs  rig.rs
readme/: pastebin-content.md
slides/: README.md  main.md
slides/assets/: project-structure.puml
